vlib/v/parser/tests/closure_var_name_conflict.vv
fn main() {
	x := 1

	y := fn [x] (x int) {
		println(x)
	}

	y(x)
	y(2)
}
